--- a/views/returns/new.ejs
+++ b/views/returns/new.ejs
@@ -74,7 +74,7 @@
     </div>
 
     <script>
-        const invoices = <%- JSON.stringify(invoices || []) %>;
+       //const invoices = <%- JSON.stringify(invoices || []) %>;
 
         function updateProducts() {
             const invoiceSelect = document.getElementById('invoice_num');
